sandbox/output
MedicineClashTest.java:88: error: cannot find symbol
            MedicineClash.of(customers, "Codeine", "Prozac", 90, LocalDate.now()).id);
                                                                                 ^
  symbol:   variable id
  location: interface List<Customer>
1 error
